runit 0.2.2
Sat, 22 Dec 2001 20:37:03 +0100
  * runit: checks for pid == 1
  * new: svwaitdown, svwaitup
  * stage3: uses svwaitdown

runit 0.2.0
Mon, 26 Nov 2001 12:29:44 +0100
  * runit-halt, runit-reboot removed, integrated into runit-init
  * tested with dietlibc
  * doc: usedietlibs.html added.
  * BSD license.

runit 0.1.2
Thu, 22 Nov 2001 18:29:05 +0100
  * collects all terminated children in all stages
  * sends sigkill to whole process group if stage2 crashes and waits
    5 seconds before restarting
  * ctraltdel not automatically shuts down, now respects /etc/runit/stopit
  * /etc/runit/ctrlaltdel touches /etc/runit/stopit
  * on shutdown request: send sigterm to stage 2, wait max 5 second, send
    sigkill if still running, leave stage 2, enter stage 3

runit 0.1.1
Tue, 20 Nov 2001 11:56:58 +0100
  * package moved to smarden.org

runit 0.1.0
Fri, 16 Nov 2001 14:01:27 +0100
  * documention
  * debian package

runit 0.0.4
Sun, 11 Nov 2001 19:07:49 +0100
  * initial release